<resources>
    <string name="app_name">Digital Campus</string>
    <string name="entrar">Entrar</string>
    <string name="password">Contraseña</string>
    <string name="check">Recuerdame la próxima vez</string>
    <string name="incorrecte">Usuario o contraseña incorrecto</string>
    <string name="assignatures">Gestionar\nasignaturas</string>
    <string name="gestioassig">Gestión asignaturas</string>
    <string name="gestioalumn">Gestión alumnos</string>
    <string name="examens">Examenes</string>
    <string name="alumnat">Gestionar\nalumnado</string>
    <string name="sortir">Salir</string>
    <string name="verificacio">Autentificación</string>
    <string name="introduccio"></string>
    <string name="dialogasstitle">Aviso!</string>
    <string name="dialogasstext">¿Estás seguro que quieres borrar esta asignatura?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="borrar">Borrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="infobasica">Información básica</string>
    <string name="temario">Temario</string>
    <string name="noualumn">Nuevo alumno</string>
    <string name="nouassig">Crear asignatura</string>
    <string name="nouexam">Nuevo examen</string>
    <string name="titulo">Título</string>
    <string name="desc">Descripción</string>
    <string name="continuar">Continuar</string>
    <string name="anterior">Anterior</string>
    <string name="selectalumnes">Selecciona los alumnos inscritos</string>
    <string name="introtemari">Introduce el temario de la asignatura:</string>
    <string name="nomtema">Nombre tema ...</string>
    <string name="insertar">Insertar</string>
    <string name="errorassig">Hay que añadir título y descripción!</string>
    <string name="errorassig2">El nombre o la descripción contiene un guión! ("-")</string>
    <string name="alumnesinscrits">Alumnos inscritos</string>
    <string name="llistatexamens">Listado examenes</string>
    <string name="fecha">Fecha del examen</string>
    <string name="hora">Hora del examen</string>
    <string name="carrera">Carrera</string>
    <string name="assignatura">Asignatura</string>
    <string name="aula">Aula</string>
    <string name="guardar">Guardar</string>
    <string name="dialogexamtitle">No hay examenes</string>
    <string name="dialogexammessage">¿Desea crear un nuevo examen o volver al menú?</string>
    <string name="crear">Crear</string>
    <string name="volver">Volver</string>
    <string name="vassig">Ver asignatura</string>
    <string name="errordata">La fecha introduida no es válida!</string>
    <string name="errorhora">La hora introduida no es válida!</string>


    <string-array name="aula_array">
        <item>Aula 1</item>
        <item>Aula 2</item>
        <item>Aula 3</item>
        <item>Aula 4</item>
        <item>Aula 5</item>
    </string-array>
    <string-array name="carrera_array">
        <item>Ingenieria informática</item>
        <item>Ingenieria multimedia</item>
        <item>Ingenieria electrónica</item>
        <item>Ingenieria de telecomunicaciones</item>
        <item>Ingenieria telemática</item>
    </string-array>
</resources>