<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ls31084.practicaprojectes.SplashActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nomNouAssig"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/descNouAssig"
        android:layout_weight="6"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/continuar"
        android:layout_weight="1"
        android:layout_gravity="right"
        android:id="@+id/pas2"
        android:drawableRight="@drawable/seguent"/>

</LinearLayout>
